[package]
name = "dazhbog"
version = "1.0.0"
edition = "2021"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
description = "A high-performance, embedded-storage Lumina server compatible with IDA Pro 7.2+."
publish = false
license = "MIT"

[lib]
name = "dazhbog"
path = "src/lib.rs"

[[bin]]
name = "dazhbog"
path = "src/main.rs"

[[bin]]
name = "recover"
path = "src/bin/recover.rs"

[dependencies]
bytes = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sled = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = { version = "0.21", default-features = false, features = ["mmap", "lz4-compression"] }
percent-encoding = "2"
cpp_demangle = "0.4"
msvc-demangler = "0.10"
rustc-demangle = "0.1"
symbolic-demangle = { version = "12", default-features = false, features = ["cpp", "msvc", "rust", "swift"] }

[patch.crates-io]
zstd-safe = { path = "vendor/zstd-safe" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
